test/files/neg/macro-invalidsig-tparams-bounds-a/Impls_1.scala
import scala.reflect.makro.{Context => Ctx}

object Impls {
  def foo[U <: String](c: Ctx) = ???
}
